<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="5dp"
        android:text="Register User"
        android:textColor="#333"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#00bfa5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/error_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="#00838f"
            android:padding="5dp"
            android:text="@string/username"
            android:textColor="#fff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:hint="Enter username"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#00838f"
            android:padding="5dp"
            android:text="@string/password_label"
            android:textColor="#fff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:hint="Enter password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="#444"
            android:onClick="register"
            android:padding="5dp"
            android:text="@string/sign_up_label"
            android:textColor="#64dd17"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00838f"
        android:onClick="showLogin"
        android:padding="5dp"
        android:text="@string/already_have_an_account_label"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>